--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,19 @@
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
         "outDir": "./dist",
         "strict": true,
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        }
-    }
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true,
+        "resolveJsonModule": true,
+        "allowJs": true
+    },
+    "include": [
+        "./src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ]
 }
