--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "jest",
-    "start": "ts-node src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts"
   },
   "keywords": [
