--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es2018",
         "module": "commonjs",
         "outDir": "./dist",
+        "rootDir": "./src",
         "strict": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true,
-        "allowJs": true
+        "esModuleInterop": true
     },
     "include": [
         "./src/**/*"
